--- a/hangman.css
+++ b/hangman.css
@@ -1,3 +1,24 @@
+/* #letters {
+    margin-top: 200px;
+    float: left;
+    width: 300px;
+}
+
+.letters {
+    width: 50px;
+    height: 50px;
+}
+
+#wordbox {
+    border-style: dotted;
+    position: absolute;
+    width: 600px;
+    height: 200px;
+    top: 0px;
+    right: 0px;
+    margin-top: 200px;
+} */
+
 .myButtons {
     position: relative;
     width: 70px;
